<resources>
    <string name="app_name">CoffeeJournal</string>
    <string name="btn_pick_date">Pick Date</string>
    <string name="et_notes_hint">Today\'s brew was…</string>
    <string name="submit_button_label">Submit</string>
    <string name="camera_button_label">Take a photo</string>
    <string name="photo_of_your_coffee">Photo of your coffee!</string>
    <string name="add_entry_nav_label">Add Entry</string>
    <string name="view_journal_nav_label">View Journal</string>
    <string name="backup_nav_label">Backup</string>
    <string name="welcome_text">What was today\'s brew like?</string>
    <string name="spinner_speakable_text">Coffee Brew Method selection</string>
    <string name="rating_bar_speakable_text">Coffee Rating Bar</string>
    <string name="home_nav_label">Home</string>
    <string name="home_title_text">Coffee Journal</string>
    <string name="home_background">Home background image depicting coffee beans</string>
    <string name="home_intro_text">Log your brews…\n\t\tReflect on past entries…\n\t\t\t\tFind your perfect cup…</string>
    <string name="journal_entries_header">You\'ve logged X cups!</string>
    <string name="title_notification_reminder">Daily reminder</string>
    <string name="description_notification_reminder">If you\'ve had a cup of coffee today, why not log it!</string>
    <string name="reminders_notification_channel_id">45678</string>
    <string name="reminders_notification_channel_name">Daily Reminder</string>
    <string name="your_web_client_id">889969526816-1hamrlacm3jtus5tnb04svdi5kcrnubm.apps.googleusercontent.com</string>
    <string name="profile_picture_of_logged_in_user">Profile picture of logged in user</string>
    <string name="backup_explanation">Back up your journal entries to your Google account, and restore them on any device. Logged in session ends when you switch away from this screen.</string>
    <string name="btn_oauth2">Sign in with Google</string>
</resources>