<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="2dp"
    android:fadingEdge="none"
    android:requiresFadingEdge="horizontal|vertical"
    tools:context=".fragments.HomeFragment">

    <ImageView
        android:id="@+id/ivHomeBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home_background"
        android:rotation="90"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/bg_coffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTitleCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:alpha="1"
        app:cardBackgroundColor="#6D4C41"
        app:cardCornerRadius="8dp"
        app:cardElevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18">

        <TextView
            android:id="@+id/tvHomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:text="@string/home_title_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#D7CCC8"
            android:textSize="35sp"
            android:textStyle="bold"
            android:typeface="normal" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvHomeIntroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:text="@string/home_intro_text"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="italic"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvTitleCard"
        app:layout_constraintVertical_bias="0.52"
        app:lineHeight="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>